# whisper

./: fine_tune_whisper.py  main.py  pyproject.toml
