[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.21"
dependencies = [
    "accelerate>=1.4.0",
    "datasets[audio]>=3.3.2",
    "evaluate>=0.4.3",
    "ffmpeg>=1.4",
    "gradio>=4.44.1",
    "jiwer>=3.1.0",
    "tensorboard>=2.19.0",
    "transformers>=4.49.0",
]
